compiler/src/test/resources/golden/errors/trait_missing_method.dawn
trait Ord2[T] {
  fn cmp2(a: T, b: T) -> Int
  fn eq2(a: T, b: T) -> Bool
}

type Point = { x: Int, y: Int }

impl Ord2[Point] {
  fn cmp2(a: Point, b: Point) -> Int = a.x - b.x
}

pub fn main() -> Unit !io = println("x")
