compiler/src/test/resources/golden/errors/trait_missing_method.err
error: impl `Ord2[Point]` is missing `eq2`
  --> trait_missing_method.dawn:8:6
  |
8 | impl Ord2[Point] {
  |      ^^^^
  = hint: provide: fn eq2(a: Point, b: Point) -> Bool
